# clinical_coder

./: .env.example  .gitignore  ARCHITECTURE.md  HANDOVER.md  LEGACY.md  PLAN.md  PLAN_v2.md  PRIVACY.md  README.md  SETUP.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
config/: demo.toml  settings.py
config/code_lists/: validation_rules.json
data/chroma_db/: chroma.sqlite3
scripts/: bootstrap.ps1  generate_synthetic.py  index_code_lists.py  reset_terminology.py  setup_chroma.py  smoke_test.py
src/clinical_coder/app/: main.py  streamlit_app.py
src/clinical_coder/config/: __init__.py  settings.py
src/clinical_coder/data/: code_list_loader.py  synthetic_generator.py
src/clinical_coder/eval/: smoke.py
src/clinical_coder/ingestion/: __init__.py  claml.py  uk_claml.py  who_claml.py
src/clinical_coder/llm/: ollama_client.py
src/clinical_coder/llm/prompts/: coding.py  explanation.py  extraction.py
src/clinical_coder/models/: clinical.py  coding.py
src/clinical_coder/notes/: __init__.py  parser.py  schemas.py
src/clinical_coder/pipeline/: __init__.py  graph.py  state.py
src/clinical_coder/privacy/: __init__.py  deidentify.py
src/clinical_coder/reasoning/: __init__.py  orchestrator.py  state.py
src/clinical_coder/retrieval/: __init__.py  terminology_retriever.py
src/clinical_coder/rules/: __init__.py  validator.py
src/clinical_coder/terminology/: __init__.py  index_store.py  models.py  repository.py
src/clinical_coder/ui/: app.py  state_manager.py  theme.py
src/clinical_coder/validation/: __init__.py
tests/: conftest.py  test_app_entrypoints.py  test_end_to_end.py  test_extractor.py  test_hosted_mode.py  test_orchestrator.py  test_parser.py  test_retrieval.py  test_smoke.py  test_terminology.py  test_validator.py
tests/fixtures/: sample_claml.xml  sample_notes.json
(+21 files in other folders)
