[project]
name = "clinical-coder"
version = "0.1.0"
description = "Local-first clinical coding assistant powered by LLMs"
requires-python = ">=3.11,<3.14"  # 3.14 too new for many scientific wheels
dependencies = [
    # Phase 1 core — no C compiler required, no heavy transitive deps
    # Uses official ollama package (httpx only) instead of langchain stack
    "ollama>=0.3,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "streamlit>=1.39,<2.0",
    "pandas>=2.2,<3.0",
    "chromadb>=0.6",
    "langchain-chroma>=0.1.4",
    "sentence-transformers>=3.4.1",
]

[project.optional-dependencies]
retrieval = [
    # Phase 2: add Chroma RAG
    # Install with: uv sync --extra retrieval
    # Note: langchain-community may need MSVC on Windows — install Build Tools first
    # or wait for Python 3.14 wheels: https://visualstudio.microsoft.com/visual-cpp-build-tools/
    "langchain>=0.3,<0.4",
    "langchain-ollama>=0.2,<0.3",
    "langchain-community>=0.3,<0.4",
    "chromadb>=0.6",
    "langchain-chroma>=0.2",
    "sentence-transformers>=3.1,<4.0",
]
graph = [
    # Phase 3: LangGraph orchestration (install retrieval first)
    "langgraph>=0.2,<0.3",
]
nlp = [
    "spacy>=3.8,<4.0",
    "presidio-analyzer>=2.2,<3.0",
    "presidio-anonymizer>=2.2,<3.0",
]
cloud = [
    "anthropic>=0.37,<1.0",
    "openai>=1.0,<2.0",
]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.7,<1.0",
    "faker>=30,<31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_coder"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
